# adhyeta-tools

./: .gitignore  README.MD  README.md  pyproject.toml
llm-proof/: extract-pdf  start-llamacpp  start-ocr  start-reader
llm-proof/reader-static/: app.js  index.html  style.css
src/adhyeta_tools/: cli.py  config.py  llm_ocr.py  llm_serve.py  pdf_extract.py  proof.py
src/adhyeta_tools/reader-static/: app.js
